# rustdoc

./: .gitignore  Cargo.toml  README.md
src/: file_management.rs  main.rs
